# S-DESCPP

./: .gitignore  CMakeLists.txt  README.md  build.sh
sdes/: example.cpp  sdes.cpp  sdes.h  test.cpp
